--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body {
 
 #headingGroup span {
     color: #97BFD8;
-    font-family: 'Raleway', sans-serif;
+    /* font-family: 'Raleway', sans-serif; */
 }
 
 #headingGroup h1 {
@@ -58,4 +58,19 @@ body {
     #mainnavbar .nav-link:hover {
         color: black;
     }
+}
+
+.blurb h2 {
+    color: #97BFD8;
+    font-size: 2.5rem;
+}
+
+.blurb p {
+    font-size: 1.25rem;
+    line-height: 2.0;
+}
+
+
+.content {
+    margin-top: 100px;
 }
